add to my repository

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" media="screen and (max-width: 1280px)" href="petite_resolution.css"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="C'est quoi Golden Events - Golden Black Ball - Informations">
     <link rel="shortcut icon" type="x-icon" href="icon_logo.jpg"/>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type="text/css" href="aos.css"/>
     <title>Golden</title>
 </head>
