--- a/news.html
+++ b/news.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Golden Event - Golden Black Ball - Actualité">
     <link rel="shortcut icon" type="x-icon" href="icon_logo.jpg"/>
     <link rel="stylesheet" type="text/css" href="news.css"/>
     <link rel="stylesheet" type="text/css" href="aos.css"/>
@@ -49,7 +50,7 @@
         <aside data-aos="zoom-in" data-aos-delay="200">
             <h2>Le Team</h2>
             <h5>[Posté le 22 Nov 2022]</h5>
-            <p>Derrière goldenblackball, il y a ces génies, ces champions, ces héros<br/>qui passent des nuits blanches pour vous offrir la plus belle soirée pour clôturer l'année 2022</p>
+            <p>Derrière goldenblackball, il y a ces génies, ces champions, ces héros qui passent des nuits blanches pour vous offrir la plus belle soirée pour clôturer l'année 2022 😊</p>
             <p><img src="team.jpeg" alt="image illustrative"/></p>
         </aside>
         <aside data-aos="zoom-in" data-aos-delay="200">
