change logo footer

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </div>
     <div id="a propos">
-        <br/><br/>
+        <br/><br/><br/><br/><br/>
     </div>
     <p class="paragraphe2">Nous ?</p> 
     <p class="paragraphe3" data-aos="fade-right" data-aos-delay="200">Qu'est-ce que <br>GOLDEN EVENTS ?</p>
@@ -127,7 +127,10 @@
         </div>
         <img class="image8" src="ticketdispo.jpg" alt="billet" data-aos="zoom-in" data-aos-delay="200">
     </div>
-    <div class="team" id="equipe">
+    <div id="equipe">
+        <br/><br/><br/>
+    </div>
+    <div class="team">
         <h6 data-aos="fade-up" data-aos-delay="600">Découvrez notre équipe</h6>
         <p class="under3"></p>
         <p class="decou" data-aos="zoom-in" data-aos-delay="200">Rencontrez les cerveaux derrière la réussite de cette activité</p>
@@ -195,7 +198,7 @@
             <div class="contenu-footer1">
                 <div>
                     <p class="paragraphe26" data-aos="zoom-in" data-aos-delay="200">E-mail <br><span data-aos="zoom-in" data-aos-delay="300">goldenevents535@gmail.com</span></p>
-                    <p class="paragraphe26" data-aos="zoom-in" data-aos-delay="400">Adresse Médias Sociaux <br><span data-aos="zoom-in" data-aos-delay="500">Nord-Kivu, Goma - RDC</span></p>
+                    <p class="paragraphe26" data-aos="zoom-in" data-aos-delay="400">Adresse <br><span data-aos="zoom-in" data-aos-delay="500">Nord-Kivu, Goma - RDC</span></p>
                 </div>
             </div>
             <div class="contenu-footer2">
