--- a/news.html
+++ b/news.html
@@ -85,7 +85,7 @@
         </aside>
         <aside data-aos="zoom-in" data-aos-delay="200">
             <h2>GOLDEN BLACK BALL</h2>
-            <h5>[Posté le 14 Octobre2022]</h5>
+            <h5>[Posté le 14 Octobre 2022]</h5>
             <p>On y est !<br/>Le Grand rendez-vous est pour ce 18 Décembre à UNION Hôtel<br/> Le billet est à 15$ singleton et 25$ couple<br/> Don't miss the event of the Year ! @goldenevents</p>
             <p><img src="goldenblackball.jpg" alt="image illustrative"/></p>
         </aside>
@@ -104,7 +104,7 @@
             <div class="contenu-footer1">
                 <div>
                     <p class="paragraphe26" data-aos="zoom-in" data-aos-delay="200">E-mail <br><span data-aos="zoom-in" data-aos-delay="300">goldenevents535@gmail.com</span></p>
-                    <p class="paragraphe26" data-aos="zoom-in" data-aos-delay="400">Adresse Médias Sociaux <br><span data-aos="zoom-in" data-aos-delay="500">Nord-Kivu, Goma - RDC</span></p>
+                    <p class="paragraphe26" data-aos="zoom-in" data-aos-delay="400">Adresse <br><span data-aos="zoom-in" data-aos-delay="500">Nord-Kivu, Goma - RDC</span></p>
                 </div>
             </div>
             <div class="contenu-footer2">
